# Online_Cinema_Api

./: .dockerignore  .env_sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose-e2e.yml  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 075e386d6de6_add_user_id_to_comment_likes.py  0c04c8a6a6f8_add_carts_and_notifications.py  668062c359b9_add_movies_models_and_update_user_model.py  7e3f0aeee20f_add_orders_and_order_items_tables.py  993597da6296_initial_accounts_models.py  d2433b3bc450_seed_user_groups.py
src/: main.py  seed.py
src/celery_app/: beat.py  tasks.py  worker.py
src/config/: __init__.py  dependencies.py  settings.py
src/database/: __init__.py  session.py
src/database/models/: accounts.py  carts.py  movies.py  notifications.py  orders.py
src/database/validators/: accounts.py
src/exceptions/: __init__.py
src/notifications/: __init__.py  emails.py  interfaces.py
src/notifications/templates/: activation_complete.html  activation_request.html  password_reset_complete.html  password_reset_request.html
src/routes/: __init__.py  accounts.py  carts.py  directors.py  genres.py  movies.py  notifications.py  orders.py  profiles.py  stars.py
src/schemas/: __init__.py  accounts.py  carts.py  movies.py  notifications.py  orders.py  profiles.py
src/security/: passwords.py  token_manager.py
src/storages/: __init__.py  s3client.py
src/tests/: conftest.py
src/tests/e2e/: test_e2e_auth_flow_register_and_login.py  test_edge_cases.py  test_user_journeys.py
src/tests/integration/: test_accounts.py  test_carts.py  test_comments.py  test_directors.py  test_genres.py  test_movie_interactions.py  test_movies.py  test_notifications.py  test_orders.py  test_profiles.py  test_stars.py
src/tests/unit/: test_jwt.py  test_schemas_accounts.py  test_schemas_movies.py  test_validators_profiles.py
src/validation/: __init__.py  movies.py  profile.py
