[project]
name = "online-cinema-api"
version = "0.1.0"
description = "Online cinema api project that allows users to select, watch, and purchase access to movies and other video materials via the internet."
authors = [
    {name = "Psychox1k",email = "success01001011@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "jose (>=1.0.0,<2.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "aiosmtplib (>=5.1.0,<6.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "aioboto3 (>=15.5.0,<16.0.0)",
    "celery (>=5.6.3,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
