[project]
name = "online-cinema-api"
version = "0.1.0"
description = "Online cinema api project that allows users to select, watch, and purchase access to movies and other video materials via the internet."
authors = [
    {name = "Psychox1k",email = "success01001011@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn[standard] (>=0.48.0,<0.49.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "jose (>=1.0.0,<2.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "aiosmtplib (>=5.1.0,<6.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "aioboto3 (>=15.5.0,<16.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "uuid (>=1.30,<2.0)",
    "python-multipart (>=0.0.29,<0.0.30)",
    "redis (>=8.0.0,<9.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "bcrypt (<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "faker (>=40.19.1,<41.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
